# pop_yandere_bot_rs

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  configs.toml  configs_example.toml  fly.toml  post.json  rustfmt.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-container-image.yml  build-docker-realease.yml  build.yml  lint-rust.yml  test.yml
src/: bot.rs  config.rs  db.rs  main.rs  yandere.rs
