[package]
name = "pop_yandere_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.7", features = [ "sqlite" ] }
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
toml = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.11"
regex = "1.9"
lazy_static = "1.4"
quick-xml = "0.30"
serde_json = "1.0"
