[package]
name = "pop_yandere_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# net
teloxide = { version = "0.12", features = ["macros"] }
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
reqwest = "0.11"
url = "2.4"

# log
log = "0.4"
pretty_env_logger = "0.5"

# string parser
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
regex = "1.9"
lazy_static = "1.4"
serde_json = "1.0"

# db
redis = "0.23"

# others
anyhow = "1.0"
once_cell = "1.18"
